--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
 <br /><br />
 <div class="row">
   <div class="col-8 offset-2">
-    <form method="post" action="/listings">
+    <form method="post" action="/listings" novalidate class="needs-validation">
       <div class="mb-4">
         <label for="title" class="form-label">Title</label>
         <input
@@ -13,8 +13,12 @@
           type="text"
           class="form-control"
           id="title"
+          required
         />
+        <div class="valid-feedback">Title look's good!</div>
+        <div class="invalid-feedback">Please enter valid title</div>
       </div>
+
       <div class="mb-4">
         <label for="description" class="form-label">Description</label>
         <textarea
@@ -25,7 +29,10 @@
           cols="10"
           class="form-control"
           id="description"
+          required
         ></textarea>
+        <div class="valid-feedback">Description look's good!</div>
+        <div class="invalid-feedback">Please enter a short description</div>
       </div>
       <div class="mb-4">
         <label for="image" class="form-label">Image Link</label>
@@ -43,10 +50,12 @@
           <input
             name="listing[price]"
             placeholder="1200"
-            type="number"
             class="form-control"
             id="price"
+            required
           />
+          <div class="valid-feedback">Price look's good!</div>
+          <div class="invalid-feedback">Price should be valid</div>
         </div>
         <div class="mb-4 col-md-8">
           <label for="country" class="form-label">Country</label>
@@ -56,7 +65,10 @@
             type="text"
             class="form-control"
             id="country"
+            required
           />
+          <div class="valid-feedback">Country look's good!</div>
+          <div class="invalid-feedback">Country name should be valid</div>
         </div>
       </div>
       <div class="mb-4">
@@ -67,7 +79,10 @@
           type="text"
           class="form-control"
           id="location"
+          required
         />
+        <div class="valid-feedback">Location look's good!</div>
+        <div class="invalid-feedback">Location should be valid</div>
       </div>
       <button class="btn btn-dark add-btn">Add</button>
       <br /><br />
