--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,93 +1,82 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row mt-3">
-  <div class="col-8 offset-3">
-    <h3><%= listing.title %></h3>
-  </div>
-  <div class="card col-6 offset-3 mt-2 show-card listings-card">
-    <img
-      src="<%= listing.image %>"
-      class="card-img-top show-img"
-      alt="listing_image"
-    />
-    <div class="card-body">
-      <p class="card-text">
-        <%= listing.description %> <br />
-        &#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") :
-        'Price not available' %> <br />
-        <%= listing.location %> <br />
-        <%= listing.country %>
-      </p>
+  <div class="row mt-3">
+    <div class="col-8 offset-3">
+      <h3>
+        <%= listing.title %>
+      </h3>
     </div>
-  </div>
-  <br />
-  <div class="btns">
-    <a
-      href="/listings/<%= listing.id %>/edit"
-      class="btn btn-dark col-1 offset-3 edit-btn"
-      >Edit</a
-    >
+    <div class="card col-6 offset-3 mt-2 show-card listings-card">
+      <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image" />
+      <div class="card-body">
+        <p class="card-text"> <i>Owned by <b>
+              <%= listing.owner.username %>
+            </b></i></p>
+        <p class="card-text">
+          <%= listing.description %>
+        </p>
+        <p class="card-text"> &#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") : 'Price not available'
+            %>
+        </p>
+        <p class="card-text">
+          <%= listing.location %>
+        </p>
+        <p class="card-text">
+          <%= listing.country %>
+        </p>
+      </div>
+    </div>
     <br />
-    <form method="post" action="/listings/<%= listing.id %>?_method=DELETE">
-      <button class="btn btn-dark offset-5">Delete</button>
-    </form>
-  </div>
-  <div class="col-8 offset-3 mb-3">
-    <hr />
-    <h4>Leave a Review</h4>
-    <form
-      action="/listings/<%= listing.id %>/reviews"
-      method="post"
-      novalidate
-      class="needs-validation"
-    >
-      <div class="mb-3 mt-3">
-        <label for="rating" class="form-label">Rating</label>
-        <input
-          type="range"
-          min="1"
-          max="5"
-          id="rating"
-          class="form-range"
-          name="review[rating]"
-        />
+
+    <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
+      <div class="btns">
+        <a href="/listings/<%= listing.id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+        <form method="post" action="/listings/<%= listing.id %>?_method=DELETE">
+          <button class="btn btn-dark offset-5">Delete</button>
+        </form>
       </div>
-      <div class="mb-3 mt-3">
-        <label for="comment" class="form-label">Comments</label>
-        <textarea
-          name="review[comment]"
-          id="comment"
-          rows="5"
-          cols="30"
-          class="form-control"
-          required
-        ></textarea>
-        <div class="valid-feedback">Good jobs!</div>
-        <div class="invalid-feedback">Please add some comments for Review</div>
-      </div>
-      <button class="btn btn-outline-dark">Submit</button>
-    </form>
-    <hr />
-    <p><b>All Reviews</b></p>
-    <div class="row">
-        <% for(review of listing.reviews){%>
-        <div class="col-md-6 mb-3">
-         <div class="card ms-3 mb-2">
-           <div class="card-body ms-3 mb-2 mt-2">
-             <h5 class="card-title">Jane Doe</h5>
-             <p class="card-text"><%= review.comment %></p>
-             <p class="card-text"><%= review.rating %> Starts</p>
-           </div>
-           <form
-             class="mb-3 ms-3"
-             action="/listings/<%=listing.id%>/reviews/<%=review.id%>?_method=DELETE"
-             method="post"
-           >
-             <button class="btn btn-sm btn-dark">Delete</button>
-           </form>
-         </div>
+      <% } %>
+        <div class="col-8 offset-3 mb-3">
+          <br>
+          <% if(currUser) { %>
+            <h4>Leave a Review</h4>
+            <form action="/listings/<%= listing.id %>/reviews" method="post" novalidate class="needs-validation">
+              <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" class="form-range" name="review[rating]" />
+              </div>
+              <div class="mb-3 mt-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea name="review[comment]" id="comment" rows="5" cols="30" class="form-control"
+                  required></textarea>
+                <div class="valid-feedback">Good jobs!</div>
+                <div class="invalid-feedback">Please add some comments for Review</div>
+              </div>
+              <button class="btn btn-outline-dark">Submit</button>
+            </form>
+            <% } %>
+            <hr>
+              <p><b>All Reviews</b></p>
+              <div class="row">
+                <% for(review of listing.reviews){%>
+                  <div class="col-md-6 mb-3">
+                    <div class="card ms-3 mb-2">
+                      <div class="card-body ms-3 mb-2 mt-2">
+                        <h5 class="card-title"><b>@</b><%= review.author.username %></h5>
+                        <p class="card-text">
+                          <%= review.comment %>
+                        </p>
+                        <p class="card-text">
+                          <%= review.rating %> Starts
+                        </p>
+                      </div>
+                      <form class="mb-3 ms-3" action="/listings/<%=listing.id%>/reviews/<%=review.id%>?_method=DELETE"
+                        method="post">
+                        <button class="btn btn-sm btn-dark">Delete</button>
+                      </form>
+                    </div>
+                  </div>
+                  <%}%>
+              </div>
         </div>
-        <%}%>
-      </div>
-    </div>
   </div>
-</div>
+  </div>
