--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,3 +109,58 @@ body {
   padding-left: 0;
   padding-right: 0;
 }
+
+.btn-search {
+  background-color: #fe424d !important;
+  color: #fff !important;
+  border-radius: 25px !important;
+  padding: 0 1rem !important;
+}
+
+.btn-search:hover {
+  background-color: #fe424d !important;
+  color: #fff !important;
+}
+
+.btn-search i {
+  display: inline !important;
+  margin-right: 0.5rem !important;
+}
+
+.search-inp {
+  border-radius: 25px !important;
+  padding: 0.5rem 3rem !important;
+  font-size: 0.95rem !important;
+}
+
+#filters {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.filter {
+  text-align: center;
+  margin-right: 1.5rem;
+  margin-top: 2rem;
+  opacity: 0.7;
+}
+
+.filter:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.tax-info {
+  display: none;
+}
+
+.tax-toggle {
+  border: 1px solid black;
+  border-radius: 1rem;
+  height: 2.5rem;
+  padding: 1rem 2rem;
+  margin-left: 2rem;
+  display: flex;
+  align-items: center;
+}
